# openproject-mcp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: context.md  conventions.md  ops.md  transport.md
scripts/: __init__.py  check_core_imports.py  smoke_test.py
src/openproject_mcp/: __init__.py  client.py  hal.py  models.py  server.py  server_registry.py
src/openproject_mcp/core/: __init__.py  client.py  config.py  context.py  errors.py  hal.py  logging.py  observability.py  registry.py
src/openproject_mcp/core/tools/: __init__.py  _collections.py  attachments.py  memberships.py  metadata.py  projects.py  queries.py  system.py  time_entries.py  users.py  work_packages.py
src/openproject_mcp/core/utils/: time_parser.py
src/openproject_mcp/tools/: __init__.py  attachments.py  memberships.py  metadata.py  projects.py  queries.py  system.py  time_entries.py  users.py  work_packages.py
src/openproject_mcp/transports/: __init__.py
src/openproject_mcp/transports/http/: __init__.py  accept_middleware.py  app.py  config.py  main.py  max_body_middleware.py  message_middleware.py  middleware.py  ops.py  origin_cors_middleware.py  rate_limit.py  request_id_middleware.py  security_headers_middleware.py  timeout_middleware.py  trusted_proxy.py
src/openproject_mcp/transports/stdio/: main.py
src/openproject_mcp/utils/: __init__.py
tests/: test_client.py  test_client_multipart.py  test_context.py  test_context_refactor.py  test_core_import_guard.py  test_hal.py  test_http_auth.py  test_http_compliance.py  test_http_cors.py  test_http_limits.py  test_http_transport.py  test_models.py  test_observability.py  test_ops_endpoints.py  test_placeholder.py  test_server_env.py  test_server_registry.py  test_time_entries.py  test_tools_attachment_download.py  test_tools_attachments.py  test_tools_memberships.py  test_tools_metadata.py  test_tools_projects.py  test_tools_queries.py  test_tools_resolvers.py  test_tools_system.py  test_tools_users.py  test_tools_work_packages.py
tests/fixtures/: project_list.json  work_package.json
