[project]
name = "openproject-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for OpenProject"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.20.0",  # For Stage 2 SSE support
    "starlette>=0.30.0" # For Stage 2 SSE support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "respx>=0.20.0" # For mocking HTTP requests in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Error, Pyflakes, Isort, Bugbear
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true